--- a/app/index.html
+++ b/app/index.html
@@ -14,11 +14,17 @@
     <h1>IGCSE Past Year Paper Finder</h1>
 
     <form name="search">
-        <input type="radio" id="question-paper" name="paper-type" checked>
-        <label for="question-paper">Question Paper</label><br>
-        <input type="radio" id="mark-scheme" name="paper-type">
-        <label for="mark-scheme">Mark Scheme</label>
-        <br><br>
+        <div id="options-panel">
+            <div>
+                Paper Type<br>
+                <input type="radio" id="question-paper" name="paper-type" checked>
+                <label for="question-paper">Question Paper</label><br>
+                <input type="radio" id="mark-scheme" name="paper-type">
+                <label for="mark-scheme">Mark Scheme</label><br>
+                <input type="radio" id="insert-paper" name="paper-type">
+                <label for="insert-paper">Insert Paper</label>
+            </div>
+        </div>
         <input type="text" id="search-bar" name="paper-code" placeholder="0620/31/M/J/23">
         <input type="submit" value="Search">
     </form>
